--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.1.0",
     "@react-native-firebase/auth": "^12.1.0",
@@ -26,7 +27,6 @@
     "react-native": "0.64.2",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^3.2.3",
-    "react-native-camera": "^3.44.1",
     "react-native-circular-progress": "^1.3.7",
     "react-native-date-picker": "^3.3.1",
     "react-native-elements": "^3.4.1",
@@ -43,8 +43,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-video": "^5.1.1",
-    "rn-fetch-blob": "^0.12.0"
+    "react-native-video": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
